styles/portfolio_css.css
.skip {
    position: absolute;
    top: -1000px;
    left: -1000px;
    height: 1px;
    width: 1px;
    text-align: left;
    overflow: hidden;
}

a.skip:active, 
a.skip:focus, 
a.skip:hover {
    left: 0; 
    top: 0;
    width: auto; 
    height: auto; 
    overflow: visible; 
    background-color: white;
    color: black;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: bold;
}

nav a {
    text-decoration: none;
    color: white;
    
}
nav a.current:link, a.current:visited {
    text-transform: uppercase;
    text-decoration: underline;
}
nav a:hover {
    text-transform:uppercase;
}

nav ul li{
    display: inline-block;
    padding-inline-start: 0px;
    padding: 10px;
}


.home_button a {
    display: block;
    text-decoration: none;
    color: white;
    font-size: 50px;
    /* margin-top: 20px; */
}

header {
    display: flex;
    flex-direction: column;
    font-family: "Righteous";
    text-align: center;

}

h1 {
    font-family: "Abel";
    color: white;
    text-align: center;
    font-size: 30px;
    padding-bottom: 60px;
}

h2 {
    font-family: "Abel";
    color: black;
    font-size: 18px;
    font-weight: bold;
}

.album h2 {
    color: white;
    text-align: center;
}

.index_container p {
    font-family: "Abel";
    font-size: 30px;
    color: white;
    /* border: solid;
    padding: 10px; */
}


/* styling for landing page starts here */
.indexBody {
    background-image: url(../images/index_background_mobile2.png);/*your background image*/  
    background-repeat:no-repeat;/*we want to have one single image not a repeated one*/  
    background-size:cover;/*this sets the image to fullscreen covering the whole screen*/ 
    background-position: center;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}


/* styling for Shows page starts here */
.showsBody {
    background-image:url(../images/background_option.png);/*your background image*/ 
    background-attachment: fixed; 
    background-repeat:no-repeat;/*we want to have one single image not a repeated one*/  
    background-size:cover;/*this sets the image to fullscreen covering the whole screen*/
    background-position:center;
    color: white;
    background-color: black;
    height: 100%
}



.container {
    display: flex;
    max-width: 992px;
    margin: 0 auto;
}

.shows_container {
    flex-direction: column;
    font-family: "Abel";
    text-align: center; 
    align-items: center;
}

.show {
    padding: 15px;
}

.tickets {
    border: 2px solid #fff;
    cursor: pointer;
    font-size: 16px;
    font-family: "Abel";
    text-transform: uppercase;
    color: #fff;
    padding: 10px 28px;
    text-decoration: none;

}

/* styling for Music page starts here */
.music_container {
    justify-content: space-evenly;
    flex-wrap: wrap;
}


.musicBody {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: space-between;
    align-content: center;
    background-color: black;
    color: white;
    font-family: "Abel";
}

/* .dark-bg {
    background-color: #000;
    opacity: 0.5;
    height: 100vh;
    width: 100vw;
} */


.play_button:hover {
    cursor: pointer;
}


.spot_player {
    display: none;
}


/* styling for Merch page starts here */
.merchBody {
    background-color: black;
}

.prev, .next {
    cursor: pointer;
    position: absolute;
    top: 50%;
    width: auto;
    padding: 16px;
    margin-top: -22px;
    color: black;
    font-weight: bold;
    font-size: 18px;
    transition: 0.6s ease;
    user-select: none;
}

.prev {
    left: 0;
    border-radius: 0 3px 3px 0;
}

/* Position the "next button" to the right */
.next {
    right: 0;
    border-radius: 3px 0 0 3px;
}
  
/* On hover, add a black background color with a little bit see-through */
.prev:hover, .next:hover {
    background-color: rgba(242, 242, 242, 0.838);
}

.item {
    border-radius: 5px;
    background-color: rgba(255, 255, 255, 0.824);
    height: 300px;
    padding: 30px;
    margin: 0 10px 50px;
}

.carousel {
    position: relative;
}

.merch_container {
    flex-wrap: wrap;
    justify-content: space-evenly;
    text-align: center;
    font-family: "Abel";
    color: black;
}

footer {
    justify-content: center;
    display: flex;
    width: 100%;
    font-size: 30px;
    padding-top: 30px;
}

footer a {
    color: white;
    text-decoration: none;
    padding: 15px;
    margin-bottom: 10px;
}

footer i:hover{
    transform: rotate(20deg);
}



/*For computer screens*/
@media only screen and (min-width: 992px) {
    .indexBody {
        background-image:linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),url(../images/index_background.png);/*your background image*/  
        background-repeat:no-repeat;/*we want to have one single image not a repeated one*/  
        background-size:cover;/*this sets the image to fullscreen covering the whole screen*/  
        height: 100vh;
        background-color: black;
    }

    .musicBody {
        background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../images/shows_landscape.png);
        background-attachment: fixed;
        background-repeat:no-repeat;/*we want to have one single image not a repeated one*/  
        background-size:cover;/*this sets the image to fullscreen covering the whole screen*/  
        background-position:center;
        height: 100%;
    }

    nav ul li{
        display: inline-block;
        /* margin-left: 30px; */
    }

    header {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        font-family: "Righteous";
        align-items: center;
        padding: 30px;
        /* width: 100%;
        top: 0;
        position: fixed;
        overflow: hidden; */
    }

    h1 {
        font-size: 40px;
    }

    .showsBody {
        background-image:url(../images/background_option.png);/*your background image*/ 
        background-attachment: fixed; 
        background-repeat:no-repeat;/*we want to have one single image not a repeated one*/  
        background-size:cover;/*this sets the image to fullscreen covering the whole screen*/
        background-position:center;
        height: 100%;
    }

    .show {
        display: flex;
        justify-content: space-around;
        align-items: center;
        width: 100%;
    }

    .show_details {
        text-align: left;
    }

    #grid_everthing {
        box-sizing: border-box;
    }

    .album {
        padding: 15px;
    }
}

/*For iPad size screens*/
@media only screen and (min-width:768px) and (max-width: 992px) {
    .main_container div{
        display: flex;
        display: inline;
        flex-direction: row; 
        font-family: "Abel";
        color: white; 
    }
    nav ul li{
        display: inline-block;
        /* margin-left: 30px; */
    }

    header {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        font-family: "Righteous";
        align-items: center;
        padding: 30px;
    }

} 

